force-app/main/default/objects/Product2/fields/SPKERCADELACVHMSMGAP__c.field-meta.xml
<CustomField>
    <fullName>SPKERCADELACVHMSMGAP__c</fullName>
    <label>SPKERCADELAC VHM SM GAP</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>