force-app/main/default/objects/Product2/fields/TOP20_Hyper__c.field-meta.xml
<CustomField>
    <fullName>TOP20_Hyper__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TOP20 Hyper</label>
    <type>Checkbox</type>
</CustomField>