force-app/main/default/objects/Product2/fields/Top20_Super__c.field-meta.xml
<CustomField>
    <fullName>Top20_Super__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Top20 Super</label>
    <type>Checkbox</type>
</CustomField>