force-app/main/default/objects/Product2/fields/Total_Weight__c.field-meta.xml
<CustomField>
    <fullName>Total_Weight__c</fullName>
    <description>Total weight</description>
    <formula>Element_nb__c  *  Weight__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Weight</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>