force-app/main/default/objects/Product2/fields/UC__c.field-meta.xml
<CustomField>
    <fullName>UC__c</fullName>
    <label>UC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Unit_Fac</valueSetName>
    </valueSet>
</CustomField>