force-app/main/default/objects/Product2/fields/UV__c.field-meta.xml
<CustomField>
    <fullName>UV__c</fullName>
    <label>UV</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Unit_Fac</valueSetName>
    </valueSet>
</CustomField>