force-app/main/default/objects/Product2/fields/VATRate__c.field-meta.xml
<CustomField>
    <fullName>VATRate__c</fullName>
    <label>VAT Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>