force-app/main/default/objects/Product2/fields/VIP__c.field-meta.xml
<CustomField>
    <fullName>VIP__c</fullName>
    <formula>IF( TOP20_Hyper__c, &apos;HM&apos; , &apos;--&apos;) &amp; &apos;/&apos; &amp;
IF( Top20_Super__c, &apos;SM&apos; , &apos;--&apos;) &amp; &apos;/&apos; &amp;
IF( Top20_Drive__c, &apos;DR&apos; , &apos;--&apos;) &amp; &apos;/&apos; &amp;
IF( Top20_Convenience__c, &apos;CS&apos; , &apos;--&apos;)</formula>
    <label>VIP</label>
    <type>Text</type>
</CustomField>