force-app/main/default/objects/Product2/fields/WD_Marketbased_Low_Limit__c.field-meta.xml
<CustomField>
    <fullName>WD_Marketbased_Low_Limit__c</fullName>
    <description>Mini WD to be reached to open product to market</description>
    <inlineHelpText>DV minimale pour l&apos;atteinte des QEL</inlineHelpText>
    <label>WD Marketbased Low Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>