force-app/main/default/objects/Product2/recordTypes/Negoptim__Competitor.recordType-meta.xml
<RecordType>
    <fullName>Negoptim__Competitor</fullName>
    <active>true</active>
    <label>Competitor</label>
</RecordType>