force-app/main/default/objects/Product2/recordTypes/Negoptim__Higher_Level_Packaging.recordType-meta.xml
<RecordType>
    <fullName>Negoptim__Higher_Level_Packaging</fullName>
    <active>true</active>
    <description>Supply Product box or any other Product  GTIN  codification linked to the Retail consumer trade item/base unit level(UL = Unité Logistique)</description>
    <label>Higher-Level Packaging</label>
</RecordType>