force-app/main/default/objects/Product2/recordTypes/Negoptim__Regular.recordType-meta.xml
<RecordType>
    <fullName>Negoptim__Regular</fullName>
    <active>true</active>
    <label>Regular</label>
</RecordType>