force-app/main/default/objects/Product2/recordTypes/Purchases_Kit.recordType-meta.xml
<RecordType>
    <fullName>Purchases_Kit</fullName>
    <active>true</active>
    <label>Purchases Kit</label>
</RecordType>