force-app/main/default/objects/Product2/recordTypes/Sales_Kit.recordType-meta.xml
<RecordType>
    <fullName>Sales_Kit</fullName>
    <active>true</active>
    <label>Sales Kit</label>
</RecordType>