force-app/main/default/objects/Product2/recordTypes/Unit_Need.recordType-meta.xml
<RecordType>
    <fullName>Unit_Need</fullName>
    <active>true</active>
    <description>Identify target need before its referential creation</description>
    <label>Unit Need</label>
</RecordType>