force-app/main/default/objects/Product2/recordTypes/Unit_Need_Initialization.recordType-meta.xml
<RecordType>
    <fullName>Unit_Need_Initialization</fullName>
    <active>true</active>
    <description>Identify target need before its referential creation and in very preliminary preparation (could be deleted or move to confirmed Unit Need))</description>
    <label>Unit Need Initialization</label>
</RecordType>