force-app/main/default/objects/Product2/validationRules/Negoptim__No_name_update_from_specific_profil.validationRule-meta.xml
<ValidationRule>
    <fullName>Negoptim__No_name_update_from_specific_profil</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Name ) &amp;&amp; ($Profile.Name = &apos;DDC&apos;) &amp;&amp; ( RecordType.DeveloperName = &apos;Product&apos;)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Vous n&apos;avez pas l&apos;autorisation de modifier le nom de l&apos;article</errorMessage>
</ValidationRule>