force-app/main/default/objects/Product2/listViews/Les_produits_Maison_Colibri.listView-meta.xml
<ListView>
    <fullName>Les_produits_Maison_Colibri</fullName>
    <columns>Negoptim__Product_EAN__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>SPKERCADELACBigLogo__c</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>SPKERCADELAC_SHELL__c</columns>
    <columns>SPKERCADELAC_RECIPE__c</columns>
    <columns>SPKERCADELAC_INGREDIENTS__c</columns>
    <columns>Negoptim__Weight__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Negoptim__Brand__c</field>
        <operation>equals</operation>
        <value>Maison Colibri</value>
    </filters>
    <label>Les produits Maison Colibri</label>
</ListView>