force-app/main/default/objects/Product2/listViews/X1_Les_Box.listView-meta.xml
<ListView>
    <fullName>X1_Les_Box</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>SPKERCADELACLOGO__c</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>SPKERCADELACDUN14__c</columns>
    <columns>SPKERCADELACArtLog__c</columns>
    <columns>SPKERCADELACExcluEnseigne__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.RECORD_TYPE</field>
        <operation>equals</operation>
        <value>Product2.Negoptim__Box</value>
    </filters>
    <label>1. Les Box</label>
</ListView>