force-app/main/default/objects/Product2/listViews/X2_Les_Produits.listView-meta.xml
<ListView>
    <fullName>X2_Les_Produits</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>SPKERCADELACBigLogo__c</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>Negoptim__Product_EAN__c</columns>
    <columns>Negoptim__Category__c</columns>
    <columns>Negoptim__Animation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.RECORD_TYPE</field>
        <operation>equals</operation>
        <value>Product2.Negoptim__Product</value>
    </filters>
    <label>2. Les Produits</label>
</ListView>