force-app/main/default/objects/Product2/listViews/X3_Les_UL.listView-meta.xml
<ListView>
    <fullName>X3_Les_UL</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Negoptim__Consumer_Trade_Item__c</columns>
    <columns>SPKERCADELACArtLog__c</columns>
    <columns>SPKERCADELACPCB__c</columns>
    <columns>SPKERCADELACDUN14__c</columns>
    <columns>PRODUCT2.RECORD_TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.RECORD_TYPE</field>
        <operation>equals</operation>
        <value>Product2.Negoptim__Higher_Level_Packaging</value>
    </filters>
    <label>3. Les UL</label>
</ListView>